# code-review-gate

./: .gitignore  SKILL.md  package.json  pyproject.toml  setup.cfg
src/: __init__.py  gate.py  models.py  reporter.py
src/checks/: __init__.py  base.py  documentation.py  functional.py  maintainability.py  performance.py  readability.py  security.py  testing.py
tests/: mock_bad_code.py  test_gate.py  verify_mock.py
